# stochastic_framework

./: .gitignore  LICENSE  README.md  SSA_data.npz  animate.py  demo.py  main.py  pyproject.toml
examples/: animate.py  birth_death.py  demo.py  main.py  switching.py  well_mixed_example.py  well_mixed_minimal_turing.py  well_mixed_predator_prey.py  well_mixed_production_degradation.py
stochastic_framework/: __init__.py  reaction.py  stochastic_sim.py  well_mixed_stochastic_sim.py
tests/: test_SSA_class.py  test_reaction.py
