[tool.poetry]
name = "stochastic-framework"
version = "0.1.0"
description = ""
authors = ["Cgyc20 <cgyc20@bath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]

main = "examples.main:main"
demo = "examples.demo:main"
birth_death = "examples.birth_death:main"
animate = "examples.animate:main"

